# algInto

./: CMakeLists.txt  bubbleSort.cpp  insertSort.cpp  main.cpp  mergeSort.cpp  weHead.h
dataStructure/: stack.cpp  stack.h
dataStructure/matrix/: matrix.h  multiply.cpp
matrix/: matrix.h  multiply.cpp
sort/: bubbleSort.cpp  heapSort.cpp  insertSort.cpp  mergeSort.cpp  quickSort.cpp
utils/: utils.cpp  utils.h
